[metadata]
name = pulsectl-asyncio
version = 0.2.3
url = https://github.com/mhthies/pulsectl-asyncio
author = Michael Thies
author_email = mail@mhthies.de
description = Asyncio frontend for the pulsectl Python bindings of libpulse
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Framework :: AsyncIO
    Topic :: Multimedia :: Sound/Audio :: Mixers
    Operating System :: POSIX
    Development Status :: 4 - Beta

[options]
packages = pulsectl_asyncio
python_requires = >=3.6
install_requires =
    pulsectl >=21.10.2,<=22.3.2
include_package_data = True
